! layout bugs

--- a/src/components/BookShelf/style.scss
+++ b/src/components/BookShelf/style.scss
@@ -22,6 +22,10 @@
         }
     }
 
+    &__title {
+        margin-top: 20px;
+    }
+
     &__image {
         width: 100%;
         height: 100px;
